<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backrandombth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FCFCF1"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/titleuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:fontFamily="@font/taviraj"
            android:text="@string/titleuser"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/sex"
                android:textColor="@color/oldgreen"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/taviraj"
                android:text="@string/male"
                android:textColor="#49454F"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/taviraj"
                android:text="@string/female"
                android:textColor="#49454F"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/age"
                android:textColor="@color/oldgreen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ageinput"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/roundedtext"
                android:ems="10"
                android:fontFamily="@font/cormorant_bold"
                android:inputType="text"
                android:text="@string/ageinput"
                android:textSize="23sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/weight"
                android:textColor="@color/oldgreen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/weightinput"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/roundedtext"
                android:ems="10"
                android:fontFamily="@font/cormorant_bold"
                android:inputType="text"
                android:text="@string/weightinput"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/height"
                android:textColor="@color/oldgreen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedtext"
                android:ems="10"
                android:fontFamily="@font/cormorant_bold"
                android:inputType="text"
                android:text="@string/heightinput"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/bmr"
                android:textColor="@color/oldgreen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="98dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedtext"
                android:ems="10"
                android:fontFamily="@font/cormorant_bold"
                android:inputType="text"
                android:text="@string/bmrinput"
                android:textSize="23sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>