<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backrandombth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FCFCF1"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/titleuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:fontFamily="@font/taviraj"
            android:text="@string/titlerandom"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lessthan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/lessthan"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/kcalrequired"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/roundedtext"
                android:ems="10"
                android:fontFamily="@font/cormorant_bold"
                android:inputType="text"
                android:text="@string/kcalrequired"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/taviraj"
                android:text="@string/cal"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/shapeofshake"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/shake_foreground" />

        <TextView
            android:id="@+id/plsshake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/taviraj"
            android:text="@string/plsshake"
            android:textColor="@color/oldgreen"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>