<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/homebackground"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/userbth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#ACC883"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/taviraj"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#ADCA82"
            android:src="@drawable/info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/outputeaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/taviraj"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/outputeaten"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/eaten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/taviraj"
                android:gravity="center"
                android:text="@string/eaten"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.735"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:progress="60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/callories"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="68dp"
                    android:ems="10"
                    android:fontFamily="@font/taviraj"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/kcalprogress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="42dp"
                    android:fontFamily="@font/taviraj"
                    android:text="@string/Kcalleft"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/outputburn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/taviraj"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/burn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/taviraj"
                android:gravity="center"
                android:text="@string/burned"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/taviraj"
            android:text="@string/Meals"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="#FEFCF2"
            android:src="@drawable/calendar" />

        <ImageButton
            android:id="@+id/addbtn"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="#FEFCF2"
            android:src="@drawable/add" />

        <!--button to open the material design date picker dialog-->

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            app:cardBackgroundColor="@color/lightgreen"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/inputfood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/taviraj"
                        android:text="Food"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/inputkcal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="170dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/taviraj"
                        android:text="@string/kcal"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

